# repsense-hcp-crm

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  model_preflight.py  schemas.py
backend/app/agent/: fallback.py  graph.py  llm.py  middleware.py  prompt.py  state.py
backend/app/agent/tools/: __init__.py  edit.py  followups.py  log.py  reference.py  samples.py
backend/app/api/: chat.py  deps.py  interactions.py  ops.py  refdata.py
backend/app/db/: init.sql  seed.sql  session.py
backend/app/services/: audit.py  compliance.py  followup_service.py  hcp_service.py  interaction_service.py  material_service.py  sample_service.py
backend/scripts/: prove_gemma_dead.py  seed.py
backend/tests/: conftest.py  test_agent_gate.py
backend/tests/services/: test_services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.d.ts
frontend/src/api/: stream.ts
frontend/src/components/: ChatPanel.tsx  Field.tsx  FormPanel.tsx  VersionDrawer.tsx
frontend/src/store/: agentSlice.ts  chatSlice.ts  formDraftSlice.ts  index.ts
